-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: internal
-
Component/s: javafx
-
Environment:
Windows 11
JDK 24.0.2
JavaFX: Current build of the direct3d12 branch in jfx-sandbox
-
windows
To reproduce this, run the following on the direct3d12 pipeline:
1. Run Ensemble8
2. Click in the search box in the upper right of the window
BUG: as the cursor blinks on, it will overwrite the search icon
3. type a single character in the search text field (note that the above bug goes away)
4. Press backspace to erase the character (note the the earlier bug returns)
BUG: The gray border around the (now correctly empty) "Results" box is missing.
If I repeat steps 3-4 the border is correctly shown the second and subsequent times.
This works fine on the d3d (Direct3D 9) and sw pipelines.
See the attached video. It looks pretty choppy, but that's an artifact of the video capture. When I run it live, the cursor smoothly blinks on and off, with the search icon overwritten when the cursor is shown.
1. Run Ensemble8
2. Click in the search box in the upper right of the window
BUG: as the cursor blinks on, it will overwrite the search icon
3. type a single character in the search text field (note that the above bug goes away)
4. Press backspace to erase the character (note the the earlier bug returns)
BUG: The gray border around the (now correctly empty) "Results" box is missing.
If I repeat steps 3-4 the border is correctly shown the second and subsequent times.
This works fine on the d3d (Direct3D 9) and sw pipelines.
See the attached video. It looks pretty choppy, but that's an artifact of the video capture. When I run it live, the cursor smoothly blinks on and off, with the search icon overwritten when the cursor is shown.