8369143: D3D12: Blinking cursor overwrites search icon in Ensemble8 with screen scale > 1